upd(maven): Update maven build infra
- Update to recent maven base plugins
- Enable compilation with Java 17/18, runtime still not ready for Tomcat
- Update ghactions to use test couchdb script

Signed-off-by: Helio Chissini de Castro <heliocastro@gmail.com>